// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxSVGMap component Rendering displays map with custom props 1`] = `
<DocumentFragment>
  <div>
    <svg
      aria-label="label"
      class="className"
      role="group"
      viewBox="viewBox"
      xmlns="http://www.w3.org/2000/svg"
    >
      <text>
        childrenBefore
      </text>
      <path
        aria-checked="false"
        aria-label="name0"
        class="locationClassName"
        d="path0"
        id="id0"
        name="name0"
        role="checkbox"
        tabindex="0"
      />
      <path
        aria-checked="false"
        aria-label="name1"
        class="locationClassName"
        d="path1"
        id="id1"
        name="name1"
        role="checkbox"
        tabindex="0"
      />
      <path
        aria-checked="false"
        aria-label="name2"
        class="locationClassName"
        d="path2"
        id="id2"
        name="name2"
        role="checkbox"
        tabindex="0"
      />
      <text>
        childrenAfter
      </text>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`CheckboxSVGMap component Rendering displays map with default props 1`] = `
<DocumentFragment>
  <div>
    <svg
      aria-label="label"
      class="svg-map"
      role="group"
      viewBox="viewBox"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        aria-checked="false"
        aria-label="name0"
        class="svg-map__location"
        d="path0"
        id="id0"
        name="name0"
        role="checkbox"
        tabindex="0"
      />
      <path
        aria-checked="false"
        aria-label="name1"
        class="svg-map__location"
        d="path1"
        id="id1"
        name="name1"
        role="checkbox"
        tabindex="0"
      />
      <path
        aria-checked="false"
        aria-label="name2"
        class="svg-map__location"
        d="path2"
        id="id2"
        name="name2"
        role="checkbox"
        tabindex="0"
      />
    </svg>
  </div>
</DocumentFragment>
`;
